--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -168,8 +168,6 @@
 <script type="text/javascript" src="js/portal/reports/chart/fbtDistributionChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtHeatmapChart.directive.js"></script>
 
-<script type="text/javascript" src="js/portal/reports/chart/mobileHitsChart.directive.js"></script>
-
 <script type="text/javascript" src="js/portal/reports/top/topRequests.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
@@ -181,10 +179,13 @@
 <script type="text/javascript" src="js/portal/reports/controller/topReportsTraffic.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/topObjects.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/fbtReports.controller.js"></script>
-<script type="text/javascript" src="js/portal/reports/controller/mobileReports.controller.js"></script>
-
 <script type="text/javascript" src="js/portal/reports/controller/trafficHeatmaps.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/lmRTTHeatmaps.controller.js"></script>
+
+<script type="text/javascript" src="js/portal/reports/mobile.module.js"></script>
+<script type="text/javascript" src="js/portal/reports/mobile.routes.js"></script>
+<script type="text/javascript" src="js/portal/reports/controller/mobileTraffic.controller.js"></script>
+<script type="text/javascript" src="js/portal/reports/chart/mobileTrafficCharts.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/keys/keys.module.js"></script>
 <script type="text/javascript" src="js/portal/keys/keys.routes.js"></script>
