--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="margin-top: -40px;">
   <div class="row">
     <div class="col-md-12">
-      <h2>Mobile Reports</h2>
+      <h2>Traffic Levels</h2>
     </div>
   </div>
 
@@ -34,7 +34,7 @@
 
           <div class="row">
             <div class="col-lg-12">
-              <div mobile-hits-chart
+              <div mobile-traffic-charts
                    ng-account="account"
                    ng-app="application"></div>
             </div>
