--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -138,7 +138,7 @@
                 <a href="" ng-if="!item.loading" ng-click="deleteApp(item)" tooltip="Delete app">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
-                <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
+                <a href="#/mobile/traffic" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
                   <i class="glyphicon glyphicon-stats"></i>
                 </a>
                 <a href="" ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Historical versions">
