--- a/code/dev/parts/menu/mobile-analitycs-side.html
+++ b/code/dev/parts/menu/mobile-analitycs-side.html
@@ -6,3 +6,7 @@
   <i class="glyphicon glyphicon-stats"></i>
   Top Reports
 </a>
+<a ui-sref-active="active" ui-sref="index.mobile.distributions" class="side-menu-item">
+  <i class="glyphicon glyphicon-stats"></i>
+  Traffic Distributions
+</a>
