mobile traffic levels improved

--- a/code/dev/parts/reports/charts/mobile-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-traffic.html
@@ -36,7 +36,7 @@
 
 <hr>
 
-<h3 style="margin-top: 10px;">Volume</h3>
+<h3 style="margin-top: 10px;">Bandwidth usage</h3>
 <div class="alert alert-info" ng-if="!_loading && !traffic.labels.length">
   No data to display
 </div>
