--- a/code/parts/reports/charts/mobile-traffic.html
+++ b/code/parts/reports/charts/mobile-traffic.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<h3 style="margin-top: 0;">Hits</h3>
+<h3 style="margin-top: 0;">Requests per second</h3>
 <div class="alert alert-info" ng-if="!_loading && !hits.labels.length">
   No data to display
 </div>
