--- a/code/parts/reports/mobile-distributions.html
+++ b/code/parts/reports/mobile-distributions.html
@@ -38,7 +38,7 @@
                   </div>
 
                   <div class="form-group">
-                    <button class="btn btn-info" ng-click="onAppSelected()">
+                    <button class="btn btn-info" ng-click="reload()">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
                       Update reports
                     </button>
