--- a/code/parts/reports/mobile-tops.html
+++ b/code/parts/reports/mobile-tops.html
@@ -20,7 +20,6 @@
                             ng-model="application"
                             >
                     </select>
-                            <!-- ng-selected="onAppSelected()" -->
                   </div>
                 </form>
 
@@ -39,7 +38,7 @@
                   </div>
 
                   <div class="form-group">
-                    <button class="btn btn-info" ng-click="onAppSelected()">
+                    <button class="btn btn-info" ng-click="reload()">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
                       Update reports
                     </button>
