Changed label names for mobile graphs

--- a/code/dev/parts/reports/charts/fbt-distribution.html
+++ b/code/dev/parts/reports/charts/fbt-distribution.html
@@ -1,4 +1,4 @@
-<h3 style="margin-top: 0;">FBT values distribution</h3>
+<h3 style="margin-top: 0;">FBT Values Distribution Histogram</h3>
 <div class="clearfix" style="margin-bottom: 8px;">
   <div class="pull-right">
 
