--- a/code/dev/parts/reports/mobile-tops.html
+++ b/code/dev/parts/reports/mobile-tops.html
@@ -56,7 +56,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Countries, Hits</h3>
+              <h3>Top 20 Countries By Requests</h3>
 
               <div class="alert alert-info" ng-hide="_loading || country_hits.length">
                 No data to display
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Countries, Users</h3>
+              <h3>Top 20 Countries By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || country_users.length">
                 No data to display
               </div>
@@ -86,7 +86,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Countries, GBT</h3>
+              <h3>Top 20 Countries By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || country_gbt.length">
                 No data to display
               </div>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 10 OSes, Hits</h3>
+              <h3>Top 10 OSes By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || os_hits.length">
                 No data to display
               </div>
@@ -114,7 +114,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 10 OSes, Users</h3>
+              <h3>Top 10 OSes By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || os_users.length">
                 No data to display
               </div>
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 10 OSes, GBT</h3>
+              <h3>Top 10 OSes By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || os_gbt.length">
                 No data to display
               </div>
@@ -142,7 +142,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Devices, Hits</h3>
+              <h3>Top 20 Devices By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || device_hits.length">
                 No data to display
               </div>
@@ -154,7 +154,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Devices, Users</h3>
+              <h3>Top 20 Devices By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || device_users.length">
                 No data to display
               </div>
@@ -170,7 +170,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Devices, GBT</h3>
+              <h3>Top 20 Devices By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || device_gbt.length">
                 No data to display
               </div>
@@ -182,7 +182,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Providers, Hits</h3>
+              <h3>Top 20 Providers By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_hits.length">
                 No data to display
               </div>
@@ -198,7 +198,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Top 20 Providers, Users</h3>
+              <h3>Top 20 Providers By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_users.length">
                 No data to display
               </div>
@@ -210,7 +210,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Top 20 Providers, GBT</h3>
+              <h3>Top 20 Providers By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_gbt.length">
                 No data to display
               </div>
@@ -226,7 +226,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>WiFi/Cellular Networks, Hits</h3>
+              <h3>WiFi/Cellular Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || network_hits.length">
                 No data to display
               </div>
@@ -238,7 +238,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>WiFi/Cellular Networks, Users</h3>
+              <h3>WiFi/Cellular Distribution By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || network_users.length">
                 No data to display
               </div>
@@ -254,7 +254,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>WiFi/Cellular Networks, GBT</h3>
+              <h3>WiFi/Cellular Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || network_gbt.length">
                 No data to display
               </div>
