--- a/code/dev/parts/reports/mobile-distributions.html
+++ b/code/dev/parts/reports/mobile-distributions.html
@@ -55,7 +55,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Destination, Hits</h3>
+              <h3>Origin/RevAPM Traffic Distribution By Requests</h3>
 
               <div class="alert alert-info" ng-hide="_loading || destination_hits.length">
                 No data to display
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Destination, GBT</h3>
+              <h3>Origin/RevAPM Traffic Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || destination_gbt.length">
                 No data to display
               </div>
@@ -84,7 +84,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Transport, Hits</h3>
+              <h3>RevAPM Transport Protocol Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || transport_hits.length">
                 No data to display
               </div>
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Transport, GBT</h3>
+              <h3>RevAPM Transport Protocol Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || transport_gbt.length">
                 No data to display
               </div>
@@ -112,7 +112,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Status, Hits</h3>
+              <h3>Requests Completion Status Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || status_hits.length">
                 No data to display
               </div>
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Status, GBT</h3>
+              <h3>Requests Completion Status Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || status_gbt.length">
                 No data to display
               </div>
@@ -140,7 +140,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Cache, Hits</h3>
+              <h3>Edge Cache Hit Ratio By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || cache_hits.length">
                 No data to display
               </div>
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h3>Cache, GBT</h3>
+              <h3>Edge Cache Hit Ratio By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || cache_gbt.length">
                 No data to display
               </div>
