web analytics, top objects, most failed, some UI improvements

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -173,6 +173,7 @@
 <script type="text/javascript" src="js/portal/reports/top/top404.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topReferer.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/top5xx.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/top/topFailed.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.config.js"></script>
 <script type="text/javascript" src="js/portal/reports/heatmaps/heatmaps.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/reportsProxyTraffic.controller.js"></script>
