--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -73,6 +73,16 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-md-12">
+              <div top-failed
+                   fl-os="os"
+                   fl-device="devices"
+                   fl-country="countries"
+                   ng-domain="domain"></div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
