Typo fix in apps edit screen

--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -30,7 +30,7 @@
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-cog"></i>&nbsp;
-                Andavanced Mode
+                Advanced Mode
               </a>
             </div>
           </div>
