--- a/code/parts/reports/top-reports.html
+++ b/code/parts/reports/top-reports.html
@@ -181,7 +181,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <h3>Successfully Completed/Failed</h3>
+              <h3>Request Completion Success/Failure Ratio</h3>
 
               <div class="alert alert-info" ng-if="!requestStatus || !requestStatus.length">
                 No data to display
