--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -24,7 +24,7 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" ng-submit="createCompany(model)">
           <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Company name</label>
             <div class="col-sm-10">
@@ -41,7 +41,7 @@
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button class="btn btn-success" ng-click="createCompany(model)" ng-disabled="_loading">
+              <button class="btn btn-success" ng-disabled="_loading">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
                 Create company
               </button>
