--- a/code/dev/parts/domains/_new.html
+++ b/code/dev/parts/domains/_new.html
@@ -26,7 +26,7 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" ng-submit="createDomain(model)">
           <div class="form-group">
             <label for="domain_name"
                    popover-append-to-body="{{true}}"
@@ -134,8 +134,7 @@
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button class="btn btn-success"
-                      ng-disabled="_loading"
-                      ng-click="createDomain(model)">
+                      ng-disabled="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create domain
