--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -30,7 +30,7 @@
             Loading...
           </div>
 
-          <form class="form-horizontal" name="form">
+          <form class="form-horizontal" name="form" ng-submit="updateProfile(user)">
             <!--<div class="form-group">-->
               <!--<label for="name" class="col-sm-2 control-label">First name</label>-->
               <!--<div class="col-sm-10">-->
@@ -65,7 +65,8 @@
                        ng-minlength="8"
                        ng-disabled="_loading"
                        ng-model="pass.current_password"
-                       id="current_password">
+                       id="current_password"
+                       autofocus>
               </div>
             </div>
             <div class="form-group">
@@ -96,7 +97,7 @@
             <hr>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button class="btn btn-success" ng-click="updateProfile(user)" ng-disabled="_loading">
+                <button class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-ok"></i>&nbsp;
                   Update password
                 </button>
