--- a/code/index.html
+++ b/code/index.html
@@ -55,7 +55,7 @@
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
-<script type="text/javascript" src="bower_components/ng-jsoneditor/ng-jsoneditor.min.js"></script>
+<script type="text/javascript" src="bower_components/ng-jsoneditor/ng-jsoneditor.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script type="text/javascript" src="bower_components/ui-select/dist/select.min.js"></script>
