--- a/code/parts/auth/reset-password.html
+++ b/code/parts/auth/reset-password.html
@@ -18,7 +18,8 @@
                      ng-disabled="loading"
                      class="form-control"
                      id="password"
-                     placeholder="Password">
+                     placeholder="Password"
+                     autofocus>
             </div>
           </div>
           <div class="form-group">
