--- a/code/parts/companies/edit.html
+++ b/code/parts/companies/edit.html
@@ -24,24 +24,24 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal" ng-submit="updateCompany(model)">
           <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Company name</label>
             <div class="col-sm-10">
               <input type="text"
-                     autofocus
                      class="form-control"
                      ng-disabled="_loading"
                      ng-model="model.companyName"
                      id="name"
-                     placeholder="Company name">
+                     placeholder="Company name"
+                     autofocus>
             </div>
           </div>
 
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button class="btn btn-success" ng-click="updateCompany(model)" ng-disabled="_loading">
+              <button class="btn btn-success" ng-disabled="_loading">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
                 Update company
               </button>
