--- a/code/parts/keys/dialog/edit.html
+++ b/code/parts/keys/dialog/edit.html
@@ -7,7 +7,7 @@
     <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
     Loading...
   </div>
-  <form class="form-horizontal">
+  <form class="form-horizontal" ng-submit="ok()">
     <div class="form-group">
       <label for="key_name"
              class="col-sm-2 control-label"
