mobile analytics, http status codes line chart

--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -20,7 +20,7 @@
 </div>
 
 <div ng-if="!_loading">
-  <h3 style="margin-top: 0;">HTTP Codes</h3>
+  <h3 style="margin-top: 0;">{{ heading }}</h3>
   <div class="alert alert-info" ng-if="!_loading && !hits.labels.length">
     No data to display
   </div>
