--- a/code/dev/parts/reports/charts/mobile-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-traffic.html
@@ -1,62 +1,14 @@
 <div class="clearfix" style="margin-bottom: 8px;">
   <div class="pull-right">
 
-    <form class="form-inline">
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="span">
-          <option value="1">Last 1 day</option>
-          <option value="7">Last 7 days</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="country"
-                ng-options="key as item for (key, item) in flCountries">
-          <option value="">All Countries</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="os"
-                ng-options="item for item in flOses">
-          <option value="">All OS</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="device"
-                ng-options="item for item in flDevices">
-          <option value="">All Devices</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="operator"
-                ng-options="item for item in flOperators">
-          <option value="">All Operators</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <select class="form-control fixed"
-                ng-model="network"
-                ng-options="item for item in flNetworks">
-          <option value="">All Network Types</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <button class="btn btn-info" ng-click="reload()">
-          <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-          Update report
-        </button>
-      </div>
-    </form>
+    <div mobile-traffic-filters
+         fl-oses="flOses"
+         fl-countries="flCountries"
+         fl-devices="flDevices"
+         fl-operators="flOperators"
+         fl-networks="flNetworks"
+         ng-filters="filters"
+         on-filter="reload()"></div>
 
   </div>
 </div>
