--- a/code/dev/parts/apps/configure.html
+++ b/code/dev/parts/apps/configure.html
@@ -18,14 +18,14 @@
                    ng-disabled="_loading"
                    class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                  Back to List
+                  Back To List
                 </a>
                 <a ui-sref="^.edit({id: model.id})"
                    ng-disabled="_loading"
                    class="btn btn-info">
 
                   <i class="glyphicon glyphicon-pencil"></i>&nbsp;
-                  Basic mode
+                  Basic Mode
                 </a>
               </div>
             </div>
