--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Add new App
+      Add New App
     </h2>
   </div>
 </div>
@@ -18,7 +18,7 @@
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back to List
+                Back To List
               </a>
             </div>
           </div>
@@ -35,7 +35,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Enter App name to register"
-            >App name</label>
+            >App Name</label>
 
             <div class="col-sm-10">
               <input type="text"
@@ -62,7 +62,7 @@
                       ng-model="model.account_id"
                       id="account_id"
                       ng-options="obj.id as obj.companyName for obj in companies">
-                <option value="">--- Select company ---</option>
+                <option value="">--- Select Company ---</option>
               </select>
             </div>
           </div>
