--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -24,7 +24,7 @@
                  ng-disabled="_loading"
                  class="btn btn-default">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back to List
+                Back To List
               </a>
               <a ui-sref="^.configure({id: model.id})"
                  ng-disabled="_loading"
@@ -39,7 +39,7 @@
             <div class="form-group">
               <label for="sdk_release_version"
                      class="col-sm-2 control-label"
-              >SDK release version</label>
+              >SDK Release Version</label>
 
               <div class="col-sm-10">
                 <select class="form-control"
@@ -57,7 +57,7 @@
               <button type="button"
                       class="btn btn-primary"
                       ng-class="{'disabled': !availableSDKVersions.length}">
-                Add new version
+                Add New Version
               </button>
               <button
                 type="button"
@@ -110,7 +110,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Rev SDK operation mode"
-            >SDK operation mode</label>
+            >SDK Operation Mode</label>
 
             <div class="col-sm-10">
               <select class="form-control"
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label">SDK events logging level</label>
+            <label class="col-sm-2 control-label">SDK Events Logging Level</label>
 
             <div class="col-sm-10">
               <label>
@@ -159,7 +159,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK configuration refresh interval in seconds"
-            >Configuration refresh interval</label>
+            >Configuration Refresh Interval</label>
 
             <div class="col-sm-10">
               <input type="number" class="form-control"
@@ -178,7 +178,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK configuration stale timeout in seconds"
-            >Configuration stale timeout</label>
+            >Configuration Stale Timeout</label>
 
             <div class="col-sm-10" >
               <input type="number" class="form-control"
@@ -195,7 +195,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Rev SDK allowed last mile transport protocols"
-            >Allowed transport protocols</label>
+            >Allowed Transport Protocols</label>
             <div class="col-sm-10" id="allowed_transport_protocols">
             <span ng-repeat="protocol in protocols">
               {{protocol}}
@@ -214,7 +214,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Rev SDK initial last mile transport protocol"
-            >Initial transport protocol</label>
+            >Initial Transport Protocol</label>
 
             <div class="col-sm-10">
               <select class="form-control"
@@ -233,7 +233,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK analytics reporting level"
-            >Reporting level</label>
+            >Reporting Level</label>
 
             <div class="col-sm-10">
               <select class="form-control"
@@ -254,7 +254,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="SDK analytics reporting interval in seconds"
-            >Reporting interval</label>
+            >Reporting Interval</label>
 
             <div class="col-sm-10">
               <input type="number" class="form-control"
@@ -271,7 +271,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="'White list' of domains which should be served via RevAPM edge service"
-            >Domains white list</label>
+            >Domains White List</label>
 
             <div class="col-sm-10">
               <ui-select tagging
@@ -296,7 +296,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="'Black list' of domains which should be always served directly from domain origin servers"
-            >Domains black list</label>
+            >Domains Black List</label>
 
             <div class="col-sm-10">
               <ui-select tagging
@@ -320,7 +320,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="'Provisioned' domains which are registered in the 'Web' section of the portal and provide full middle-mile acceleration"
-            >Domains provisioned list</label>
+            >Domains Provisioned List</label>
 
             <div class="col-sm-10">
               <ui-select multiple
@@ -354,7 +354,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="A/B testing offloading ratio in %"
-            >A/B testing offloading ratio in %</label>
+            >A/B Testing Offloading Ratio In %</label>
 
             <div class="col-sm-10">
               <input type="number"
