--- a/code/dev/parts/apps/versions.html
+++ b/code/dev/parts/apps/versions.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        App versions: <strong>{{model.app_name}}</strong>
+        App Versions: <strong>{{model.app_name}}</strong>
       </h2>
     </div>
   </div>
@@ -18,7 +18,7 @@
                    ng-disabled="_loading"
                    class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                  Back to List
+                  Back To List
                 </a>
               </div>
             </div>
