--- a/code/dev/parts/auth/block/user-login-logout.html
+++ b/code/dev/parts/auth/block/user-login-logout.html
@@ -6,8 +6,8 @@
       <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="#/profile"><i class="glyphicon glyphicon-user"></i>&nbsp;Update password</a></li>
-      <li><a href="#/2fa"><i class="glyphicon glyphicon-lock"></i>&nbsp;Security settings</a></li>
+      <li><a href="#/profile"><i class="glyphicon glyphicon-user"></i>&nbsp;Update Password</a></li>
+      <li><a href="#/2fa"><i class="glyphicon glyphicon-lock"></i>&nbsp;Security Settings</a></li>
       <!--<li><a href="/"><i class="glyphicon glyphicon-user"></i>&nbsp;Back to user portal</a></li>-->
       <li role="separator" class="divider"></li>
       <li><a href="" ng-click="logout()"><i class="glyphicon glyphicon-log-out"></i>&nbsp;Logout</a></li>
