--- a/code/dev/parts/auth/menu/select-account-domain.html
+++ b/code/dev/parts/auth/menu/select-account-domain.html
@@ -9,7 +9,7 @@
               ng-change="onDomainChange()"
               class="form-control"
               style="width: 250px">
-        <option value="">--- Select domain---</option>
+        <option value="">--- Select Domain---</option>
       </select>
     </div>
   </form>
