--- a/code/dev/parts/auth/two-factor-auth-code.html
+++ b/code/dev/parts/auth/two-factor-auth-code.html
@@ -10,7 +10,7 @@
                class="form-control"
                ng-model="data.code"
                id="code"
-               placeholder="Enter your Code here"
+               placeholder="Enter Your Code here"
                ng-disabled="data.loading"
                required
                autofocus>
