--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -117,9 +117,9 @@
                       ng-disabled="_loading"
                       ng-model="configuration.operation_mode"
                       id="operation_mode">
-                <option value="transfer_and_report">Transfer and report</option>
-                <option value="transfer_only">Transfer only</option>
-                <option value="report_only">Report only</option>
+                <option value="transfer_and_report">Transfer And Report</option>
+                <option value="transfer_only">Transfer Only</option>
+                <option value="report_only">Report Only</option>
                 <option value="off">Off</option>
               </select>
             </div>
@@ -275,7 +275,7 @@
 
             <div class="col-sm-10">
               <ui-select tagging
-                         tagging-label="Add new domain"
+                         tagging-label="Add New Domain"
                          multiple
                          tagging-tokens="SPACE|,"
                          theme="bootstrap"
@@ -300,7 +300,7 @@
 
             <div class="col-sm-10">
               <ui-select tagging
-                         tagging-label="Add new domain"
+                         tagging-label="Add New Domain"
                          multiple
                          tagging-tokens="SPACE|,"
                          theme="bootstrap" class="form-control"
